# testcase_ProninTeam

./: .gitignore  README.md
Donution/: .dockerignore  Dockerfile  Dockerfile.celery  entrypoint.celery.sh  entrypoint.sh  manage.py  pyproject.toml
Donution/Donution/: asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
Donution/api/: apps.py  factories.py  signals.py  tasks.py  urls.py  utils.py
Donution/api/management/commands/: clean_db.py  fill_db.py  try.py
Donution/api/v1/: serializers.py  urls.py  utils.py  views.py
Donution/collects/: admin.py  constants.py  models.py  permissions.py
Donution/payments/: models.py
infra/: .env.compose  dev.yml  docker-compose.yml  docker-compose.yml.bak  env.example  nginx.conf
